<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">
    <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    android:elevation="4dp"
                    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                    app:popupTheme="@style/AppTheme.PopupOverlay">
    </android.support.v7.widget.Toolbar>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textNombreCompletoLayout"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/textNombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_nombreCompleto"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fechaNacimientoLabel"
        android:text="@string/date_picker"
        android:layout_below="@id/textNombreCompletoLayout"/>
    <DatePicker
        android:id="@+id/datepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"

        android:datePickerMode="spinner"
        android:layout_below="@id/fechaNacimientoLabel"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textTelefonoLayout"
        android:layout_below="@id/datepicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/textTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_telefono"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_below="@id/textTelefonoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_Email"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/descricionContactoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailLayout"

        android:hint="@string/form_descripcionContacto">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textDescripcionContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/MiBoton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:height="60dp"
        android:onClick="boton_siguiente"
        android:text="@string/form_boton_label"

        />

</RelativeLayout>